# OpenTak-IntelMap

./: .gitignore  Makefile  README.md  pyproject.toml
.superpowers/brainstorm/50977-1781635692/content/: detail-mockup.html  layout-options.html
.superpowers/brainstorm/62995-1781548009/content/: approaches.html  architecture.html  maptak-layout.html  plugin-architecture.html
.superpowers/brainstorm/62995-1781548009/state/: server-info
docs/superpowers/plans/: 2026-06-15-maptak-plugin.md  2026-06-16-data-management.md
docs/superpowers/specs/: 2026-06-15-maptak-design.md  2026-06-16-data-management-design.md
maptak-ui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
maptak-ui/src/: App.module.css  App.tsx  index.css  socket.ts
maptak-ui/src/components/: DataManager.module.css  DataManager.test.tsx  DataManager.tsx  LayerControl.tsx  LiveIndicator.tsx  UnitDetailPanel.module.css  UnitDetailPanel.test.tsx  UnitDetailPanel.tsx  UnitSidebar.module.css  UnitSidebar.test.tsx  UnitSidebar.tsx
maptak-ui/src/hooks/: useMapState.test.ts  useMapState.ts  useMapStore.test.ts  useMapStore.ts  useMissions.ts  useSocketEvents.test.ts  useSocketEvents.ts
maptak-ui/src/map/: EudLayer.test.tsx  EudLayer.tsx  MapController.tsx  MapCore.tsx  ShapeLayer.test.tsx  ShapeLayer.tsx  TrackLayer.test.tsx  TrackLayer.tsx
maptak-ui/src/test/: setup.ts
maptak-ui/src/types/: maptak.types.ts
ots_maptak/: __init__.py  app.py  default_config.py
tests/: conftest.py  test_data_endpoints.py  test_plugin.py
(+7 files in other folders)
